# tap-toast-sftp

./: README.md  examine_excel.py  meltano.yml  pyproject.toml  test_config.json  tox.ini
tap_toast_sftp/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_toast_sftp/schemas/: accounting_report.json  all_items_report.json  cash_entries.json  check_details.json  house_account_export.json  item_selection_details.json  kitchen_timings.json  menu_export.json  menu_export_v2.json  menu_group_items.json  menu_groups.json  menu_items.json  menu_menus.json  menu_option_groups.json  menu_option_items.json  menu_prices.json  menu_v2_groups.json  menu_v2_items.json  menu_v2_menus.json  menu_v2_option_groups.json  menu_v2_option_items.json  menu_v2_premodifier_groups.json  menu_v2_premodifier_items.json  modifiers_selection_details.json  order_details.json  payment_details.json  sales.json  time_entries.json
tap_toast_sftp/streams/: __init__.py  accounting_report.py  all_items_report.py  base.py  cash_entries.py  check_details.py  house_account_export.py  item_selection_details.py  kitchen_timings.py  menu_export.py  menu_export_child_streams.py  menu_export_v2_child_streams.py  menu_items.py  menu_streams.py  modifiers_selection_details.py  order_details.py  payment_details.py  sales.py  time_entries.py
tests/: __init__.py  test_accounting_report.py  test_core.py  test_latest_date_folder.py  test_ssh_key.py
